--- a/src/shared/themes/carbon/index.css
+++ b/src/shared/themes/carbon/index.css
@@ -8,8 +8,7 @@
 
 /* Import component-specific themes */
 @import './button/index.css';
-@import './input/light.css';
-@import './input/dark.css';
+@import './input/index.css';
 
 /* TODO: Import other component themes as they are created
 @import './card/index.css';
