--- a/src/shared/themes/carbon/index.css
+++ b/src/shared/themes/carbon/index.css
@@ -9,6 +9,7 @@
 /* Import component-specific themes */
 @import './button/index.css';
 @import './input/index.css';
+@import './icon/index.css';
 
 /* TODO: Import other component themes as they are created
 @import './card/index.css';
