--- a/src/shared/themes/carbon/index.css
+++ b/src/shared/themes/carbon/index.css
@@ -11,6 +11,7 @@
 @import './input/index.css';
 @import './icon/index.css';
 @import './checkbox/index.css';
+@import './radio/index.css';
 
 /* TODO: Import other component themes as they are created
 @import './card/index.css';
