--- a/src/shared/themes/carbon/index.css
+++ b/src/shared/themes/carbon/index.css
@@ -12,6 +12,7 @@
 @import './icon/index.css';
 @import './checkbox/index.css';
 @import './radio/index.css';
+@import './select/index.css';
 
 /* TODO: Import other component themes as they are created
 @import './card/index.css';
